java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testIncorrectType58119a-hints.pass
Create field c in org.netbeans.test.java.hints.IncorrectType58119a
Create parameter c
Create local variable c
